--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -6,11 +6,15 @@ hydra:
 EXP_NAME: "test"
 FOLD: 0
 STEPS_PER_EPOCH: 2000
-BS: 64
+BS: 128
 
-EPOCH: 20
+EPOCH: 10
 
 TRANSFORM: "src.transforms.stack_turkey"
+
+MODEL:
+  NAME: "src.model.CustomModel_v1"
+  IMG_SIZE: [256, 256]
 
 qtransform_params:
   sr: 2048
@@ -25,3 +29,9 @@ bandpass_param:
   hf: 400
   order: 8 
   sr: 2048
+
+cwt_params:
+  widths: [10, 90, 0.5]
+  wavelet: 'cmorlet'
+  channels: 3
+  filter_len: 4096
