--- a/configs/exp_grid/baseline_b3_384.yaml
+++ b/configs/exp_grid/baseline_b3_384.yaml
@@ -1,32 +1,35 @@
-EXP_NAME: "026_effnetb0_standart_scaler_1ch_wo_minmax" #naming error
+EXP_NAME: "baseline_b3_384"
 FOLD: 0
-BS: 128
+BS: 32
 FP16: False
 EPOCH:  7
+TRAIN_FOLD: -1
+
 MODEL:
   NAME: "CustomModel_v1"
   USE_SCALER: True
   CFG:
-    encoder: "efficientnet_b0"
-    img_w: 256
-    img_h: 256
+    encoder: "efficientnet_b3"
+    img_w: 384
+    img_h: 384
     sr: 2048
     fmin: 20 
     fmax: 1024
     hop_length: 32
     bins_per_octave: 8
-
-SCALER:
-  NAME: "src.transforms.Scaler"
-  MODE: "standart"
-  CHANNELS: 1
-
-
+    filter_scale: 1
 TRANSFORM: 
   NAME: "src.transforms.bandpass_transform"
+  CFG:
+    lf: 30
+    hf: 400
 
 SCHEDULER:
   NAME: "torch.optim.lr_scheduler.CosineAnnealingLR"
   CFG:
     T_max: 5
     eta_min: 0.00001
+
+N_SAVED: 3
+
+TENSORBOARD_DIR: "/home/trytolose/rinat/kaggle/grav_waves_detection/logs/tensorboard"
