--- a/configs/exp_v2/027_effnetb0_bandpass_fp32_cos_5_best.yaml
+++ b/configs/exp_v2/027_effnetb0_bandpass_fp32_cos_5_best.yaml
@@ -1,11 +1,10 @@
-EXP_NAME: "026_effnetb0_standart_scaler_1ch_wo_minmax" #naming error
+EXP_NAME: "027_effnetb0_bandpass_fp32_cos_5_best"
 FOLD: 0
-BS: 128
-FP16: False
-EPOCH:  7
+BS: 256
+FP16: True
+EPOCH:  10
 MODEL:
   NAME: "CustomModel_v1"
-  USE_SCALER: True
   CFG:
     encoder: "efficientnet_b0"
     img_w: 256
@@ -15,15 +14,8 @@ MODEL:
     fmax: 1024
     hop_length: 32
     bins_per_octave: 8
-
-SCALER:
-  NAME: "src.transforms.Scaler"
-  MODE: "standart"
-  CHANNELS: 1
-
-
 TRANSFORM: 
-  NAME: "src.transforms.bandpass_transform"
+  NAME: "src.transforms.minmax_bandpass_transform"
 
 SCHEDULER:
   NAME: "torch.optim.lr_scheduler.CosineAnnealingLR"
