--- a/configs/exp_b/effnetb0_baseline_improve.yaml
+++ b/configs/exp_b/effnetb0_baseline_improve.yaml
@@ -1,21 +1,24 @@
-EXP_NAME: "004_effnetb0_bandpass_fp32_cos"
+EXP_NAME: "001_effnetb0_bandpass_fp32_cos_bs32"
 FOLD: 0
-BS: 64
+DEVICE: 1
+BS: 32
 FP16: False
-EPOCH:  10
+EPOCH:  7
 MODEL:
   NAME: "CustomModel_v1"
   CFG:
     encoder: "efficientnet_b0"
-    img_w: 256
-    img_h: 256
+    img_w: 128
+    img_h: 128
     sr: 2048
     fmin: 20 
     fmax: 1024
     hop_length: 32
     bins_per_octave: 8
+    scale_cqt: True
+
 TRANSFORM: 
-  NAME: "src.transforms.minmax_bandpass_transform"
+  NAME: "src.transforms.minmax_turkey_bandpass_transform" # tukey 0.2
 
 SCHEDULER:
   NAME: "torch.optim.lr_scheduler.CosineAnnealingLR"
