--- a/configs/exp_b/effnetb0_substract_noise.yaml
+++ b/configs/exp_b/effnetb0_substract_noise.yaml
@@ -1,8 +1,9 @@
-EXP_NAME: "004_effnetb0_bandpass_fp32_cos"
+EXP_NAME: "001_effnetb0_bandpass_sub_spec2_fp32_cos"
 FOLD: 0
+DEVICE: 0
 BS: 64
 FP16: False
-EPOCH:  10
+EPOCH:  7
 MODEL:
   NAME: "CustomModel_v1"
   CFG:
@@ -14,8 +15,9 @@ MODEL:
     fmax: 1024
     hop_length: 32
     bins_per_octave: 8
+
 TRANSFORM: 
-  NAME: "src.transforms.minmax_bandpass_transform"
+  NAME: "src.transforms.minmax_sub_bandpass_transform"
 
 SCHEDULER:
   NAME: "torch.optim.lr_scheduler.CosineAnnealingLR"
