--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -10,7 +10,10 @@ STEPS_PER_EPOCH: 2000
 BS: 128
 NUM_WORKERS: 12
 FP16: False
-GRAD_CLIP: 0
+GRAD_CLIP: 
+  START_EPOCH: 1000
+  THR: 0.5
+  
 TRAIN_FOLD: -1
 
 TRANSFORM: 
