--- a/configs/wavenets/000_cnn_baseline128.yaml
+++ b/configs/wavenets/000_cnn_baseline128.yaml
@@ -1,20 +1,20 @@
-EXP_NAME: "01_b3_512_v2_noclip"
-FOLD: 1
-BS: 32
-FP16: True
+EXP_NAME: "000_cnn_baseline128"
+FOLD: 0
+BS: 64
+FP16: False
 EPOCH:  7
-TRAIN_FOLD: -1
+TRAIN_FOLD: 1
 
-GRAD_CLIP: 
-  START_EPOCH: 1000
-  THR: 0.5
+# GRAD_CLIP: 
+#   START_EPOCH: 3
+#   THR: 0.5
 
 MODEL:
   NAME: "CustomModel_v1"
   CFG:
-    encoder: "efficientnet_b3"
-    img_w: 512
-    img_h: 512
+    encoder: "efficientnet_b0"
+    img_w: 128
+    img_h: 128
     sr: 2048
     fmin: 20 
     fmax: 1024
