--- a/requirements.txt
+++ b/requirements.txt
@@ -1,211 +1,18 @@
-absl-py==0.12.0
-addict==2.4.0
-affine==2.3.0
-albumentations==0.5.2
-antlr4-python3-runtime==4.8
-anyio @ file:///tmp/build/80754af9/anyio_1617783275907/work/dist
-appdirs==1.4.4
-argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1613037097816/work
-asciitree==0.3.3
-astropy==4.3.1
-astunparse==1.6.3
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-audioread==2.1.9
-Babel @ file:///tmp/build/80754af9/babel_1620871417480/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-black==21.7b0
-bleach @ file:///tmp/build/80754af9/bleach_1628110601003/work
-blessings==1.7
-brotlipy==0.7.0
-cachetools==4.2.1
-certifi==2021.5.30
-cffi @ file:///tmp/build/80754af9/cffi_1625807838443/work
-chardet @ file:///tmp/build/80754af9/chardet_1607706746162/work
-CharPyLS @ git+https://github.com/Who8MyLunch/CharPyLS@9a915903358a34f013b52d54eaba5c1ff7a5e8b2
-clang==5.0
-click @ file:///tmp/build/80754af9/click_1621604852318/work
-click-plugins==1.1.1
-cligj==0.7.1
-cryptography @ file:///tmp/build/80754af9/cryptography_1616769286105/work
-cycler==0.10.0
-Cython==0.29.23
-decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-dill==0.3.4
-dqsegdb2==1.0.1
-efficientnet-pytorch==0.6.3
-efficientnet-pytorch-3d @ git+https://github.com/shijianjian/EfficientNet-PyTorch-3D@3e79bcd06216b2e831bf3300fff9636cce2cd0d1
-entrypoints==0.3
-fasteners==0.16
-flatbuffers==1.12
-future==0.18.2
-gast==0.4.0
-google-auth==1.28.0
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-googleapis-common-protos==1.53.0
 gpustat==0.6.0
-grpcio==1.39.0
-gwdatafind==1.0.4
-gwosc==0.6.1
-gwpy==2.0.4
-h5py==3.1.0
 hydra-core==1.0.6
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-imagecodecs==2021.2.26
-imageio==2.9.0
-imgaug==0.4.0
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1617874469820/work
-importlib-resources==5.1.2
-ipykernel @ file:///tmp/build/80754af9/ipykernel_1596207638929/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///tmp/build/80754af9/ipython_1628243924020/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-iterative-stratification==0.1.6
-jedi @ file:///tmp/build/80754af9/jedi_1611333125342/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
-joblib==1.0.0
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-core @ file:///tmp/build/80754af9/jupyter_core_1612213311222/work
-jupyter-server @ file:///tmp/build/80754af9/jupyter_server_1616083640759/work
-jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1612296988614/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1629224937070/work
 kaggle==1.5.12
-keras==2.6.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-librosa==0.8.0
-ligo-segments==1.3.0
-ligotimegps==2.0.1
-llvmlite==0.35.0
-madgrad==1.0
-Markdown==3.3.4
-MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1621528148836/work
-matplotlib==3.3.3
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186064646/work
-mkl-service==2.4.0
-mmcv-full==1.3.5
--e git+https://github.com/open-mmlab/mmdetection.git@24b6f9319f7657336950fde9b5ab562201d90963#egg=mmdet
-munch==2.5.0
-mypy-extensions==0.4.3
-nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///tmp/build/80754af9/nbconvert_1624479060632/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-networkx==2.5
 nnAudio==0.2.5
-nose==1.3.7
-notebook @ file:///tmp/build/80754af9/notebook_1629205607169/work
-numba==0.52.0
-numcodecs==0.7.3
-numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1626271506491/work
-nvidia-ml-py3==7.352.0
-oauthlib==3.1.0
-omegaconf==2.0.6
-opencv-python==4.5.1.48
-opencv-python-headless==4.5.1.48
-opt-einsum==3.3.0
-packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
-pandas==1.2.1
-pandocfilters @ file:///tmp/build/80754af9/pandocfilters_1605120460739/work
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
-pathspec==0.9.0
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
 Pillow==8.3.1
-pooch==1.3.0
-pretrainedmodels==0.7.4
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
-promise==2.3
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-protobuf==3.15.7
-psutil==5.8.0
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycocotools==2.0.2
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pydicom @ file:///home/conda/feedstock_root/build_artifacts/pydicom_1607562682046/work
-pyerfa==2.0.0
-Pygments @ file:///tmp/build/80754af9/pygments_1629234116488/work
-pylibjpeg==1.3.0
-pylibjpeg-libjpeg==1.2.0
-pylibjpeg-openjpeg==1.1.1
-pylibjpeg-rle==1.1.0
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1600141720057/work
-PySocks @ file:///tmp/build/80754af9/pysocks_1605305779399/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-python-gdcm==3.0.9.0
-python-slugify==4.0.1
-pytorch-metric-learning==0.9.96
-pytorch-ranger==0.1.1
 pytorch-toolbelt==0.4.2
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
 PyWavelets==1.1.1
 PyYAML==5.4.1
-pyzmq @ file:///tmp/build/80754af9/pyzmq_1628276010766/work
-rasterio==1.2.1
-regex @ file:///tmp/build/80754af9/regex_1629301332491/work
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-requests-oauthlib==1.3.0
-resampy==0.2.2
-resnest==0.0.5
-rsa==4.7.2
 scikit-image==0.18.1
 scikit-learn==0.24.1
 scipy==1.6.0
-seaborn==0.11.1
-segmentation-models-pytorch==0.2.0
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-Shapely==1.7.1
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-sklearn==0.0
-slugify==0.0.1
-sniffio @ file:///tmp/build/80754af9/sniffio_1614030475067/work
-snuggs==1.4.7
-SoundFile==0.10.3.post1
-tensorboard==2.6.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.6.0
-tensorflow-datasets==4.4.0
-tensorflow-estimator==2.6.0
-tensorflow-metadata==1.2.0
-termcolor==1.1.0
-terminado==0.9.4
-terminaltables==3.1.0
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-text-unidecode==1.3
-threadpoolctl==2.1.0
-tifffile==2021.1.14
 timm==0.4.12
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tomli==1.2.1
-torch==1.9.0+cu111
+# torch==1.9.0+cu111
 torch-optimizer==0.1.0
 torch-tb-profiler==0.1.0
-torchaudio==0.9.0
-torchvision==0.10.0+cu111
-tornado @ file:///tmp/build/80754af9/tornado_1606942300299/work
+# torchaudio==0.9.0
+# torchvision==0.10.0+cu111
 tqdm==4.56.0
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-typed-ast @ file:///tmp/build/80754af9/typed-ast_1624953673417/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1624965014186/work
-urllib3 @ file:///tmp/build/80754af9/urllib3_1625084269274/work
-warmup-scheduler @ git+https://github.com/ildoonet/pytorch-gradual-warmup-lr.git@6b5e8953a80aef5b324104dc0c2e9b8c34d622bd
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-Werkzeug==1.0.1
-wrapt==1.12.1
-yapf==0.31.0
-zarr==2.6.1
-zipp @ file:///tmp/build/80754af9/zipp_1625570634446/work
